--- a/src/App.scss
+++ b/src/App.scss
@@ -1,14 +1,14 @@
 .app {
-  background-color: var(--primary-color);
+  background-color: var(--black-color);
   font-family: var(--font-base);
 }
 
 .app__whitebg {
-  background-color: var(--white-color);
+  background-color: var(--black-color);
 }
 
 .app__primarybg {
-  background-color: var(--primary-color);
+  background-color: var(--black-color);
 }
 
 .app__container {
@@ -47,7 +47,7 @@
 
   p {
     text-transform: uppercase;
-    color: var(--black-color);
+    color: var(--color-white-200);
   }
 }
 
@@ -55,11 +55,11 @@
   font-size: 2.75rem;
   font-weight: 800;
   text-align: center;
-  color: var(--black-color);
+  color: var(--color-blue-300);
   text-transform: capitalize;
 
   span {
-    color: var(--secondary-color);
+    color: var(--color-white-200);
   }
 
   @media screen and (min-width: 2000px) {
