--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -1,3 +1,11 @@
+#work{
+  position: relative;
+  background: url("../../assets/pngwing.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+}
+
 .app__works {
   flex: 1;
   width: 100%;
