--- a/src/App.scss
+++ b/src/App.scss
@@ -36,6 +36,7 @@
   }
 }
 
+
 .copyright {
   width: 100%;
   padding: 2rem 0 0;
@@ -122,7 +123,7 @@
     svg {
       width: 15px;
       height: 15px;
-      color: var(--gray-color);
+      color: var(--color-rust-100);
     }
 
     &:hover {
@@ -147,7 +148,11 @@
     }
   }
 }
-
+.heading {
+  &-span {
+    color: var(--color-rust-200);
+  }
+}
 .app__navigation {
   display: flex;
   justify-content: center;
@@ -166,7 +171,7 @@
     transition: background-color 0.2s ease-in-out;
 
     &:hover {
-      background-color: var(--secondary-color);
+      background-color: var(--color-rust-100);
     }
 
     @media screen and (min-width: 2000px) {
@@ -186,3 +191,5 @@
     padding: 2rem;
   }
 }
+
+
