--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,11 +6,11 @@
   align-items: center;
 
   padding: 1rem 2rem;
-  background: rgba(255, 255, 255, 0.25);
+  background: var(color-black-100);
   // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
+  // border: 1px solid rgba(255, 255, 255, 0.18);
   position: fixed;
   z-index: 2;
 }
@@ -55,7 +55,7 @@
     }
 
     a {
-      color: var(--gray-color);
+      color: var(--color-rust-200);
       text-decoration: none;
       flex-direction: column;
 
@@ -90,7 +90,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--secondary-color);
+  background-color: var(--color-rust-200);
 
 
   svg {
@@ -116,8 +116,8 @@
     align-items: flex-end;
     flex-direction: column;
     
-    background: url('../../assets/bgWhite.png');
-    background-color: var(--white-color);
+    background: url('../../assets/pngwing5.png');
+    background-color: var(--color-black-100);
     background-size: cover;
     background-repeat: repeat;
 
@@ -127,7 +127,7 @@
     svg {
       width: 35px;
       height: 35px;
-      color: var(--secondary-color);
+      color: var(--color-rust-200);
       margin: 0.5rem 1rem;
     }
 
@@ -147,7 +147,7 @@
         margin: 1rem;
 
         a {
-          color: var(--gray-color);
+          color: var(--color-rust-200);
           text-decoration: none;
           font-size: 1rem;
           text-transform: uppercase;
