--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -1,3 +1,11 @@
+#about{
+  position: relative;
+  background: url("../../assets/pngwing.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+}
+
 .app__about {
   flex: 1;
   width: 100%;
