--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -1,3 +1,10 @@
+#footer{
+  position: relative;
+  background: url("../../assets/pngwing.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+}
 .app__footer {
   flex: 1;
   width: 100%;
