--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -1,196 +1,355 @@
-// #home {
-//   position: relative;
-//   background: url("../../assets/bgIMG.png");
-//   background-size: cover;
-//   background-position: center;
-//   background-repeat: repeat;
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap");
 
-//   // disable the default padding styles
-//   .app__wrapper {
-//     padding: 0;
 
-//     .copyright {
-//       display: none;
-//     }
-//   }
-// }
+main {
+   overflow: hidden;
+}
 
-// .app__header {
-//   flex: 1;
-//   width: 100%;
-//   height: 100%;
-//   flex-direction: row;
+#home {
+  position: relative;
+  background: url("../../assets/pngwing.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
 
-//   padding: 6rem 2rem 0rem;
+  // disable the default padding styles
+  .app__wrapper {
+    padding: 0;
 
-//   @media screen and (min-width: 2000px) {
-//     padding-top: 8rem;
-//   }
+    .copyright {
+      display: none;
+    }
+  }
+}
+a,
+button {
+   cursor: pointer;
+   border: none;
+   outline: none;
+   user-select: none;
+   background: none;
+   box-shadow: none;
+   text-decoration: none;
+}
 
-//   @media screen and (max-width: 1200px) {
-//     flex-direction: column;
-//   }
+img {
+   display: block;
+   max-width: 100%;
+   height: auto;
+   object-fit: cover;
+}
 
-//   @media screen and (max-width: 450px) {
-//     padding: 6rem 1rem 2rem;
-//   }
-// }
+// Elements Section
+.section {
+   margin: 0 auto;
+   padding: 6rem 0 1rem;
+}
 
-// .app__header-info {
-//   flex: 0.65;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: flex-start;
-//   align-items: flex-start;
-//   height: 100%;
+.container {
+   max-width: 75rem;
+   height: auto;
+   margin: 0 auto;
+   padding: 0 1.25rem;
+}
 
-//   margin: 0 2rem;
+.centered {
+   text-align: center;
+   vertical-align: middle;
+   margin-bottom: 1rem;
+}
 
-//   @media screen and (max-width: 1200px) {
-//     width: 100%;
-//     margin-right: 0rem;
-//   }
-// }
+// Typography
+.heading {
+  
+   &-xl {
+      font-family: inherit;
+      font-size: clamp(2.648rem, 6vw, 4.241rem);
+      font-weight: 700;
+      line-height: 1.15;
+      letter-spacing: -1px;
+      color: var(--color-white-200);
 
-// .app__header-badge {
-//   width: 100%;
-//   display: flex;
-//   justify-content: flex-end;
-//   align-items: flex-end;
-//   flex-direction: column;
+      
+   }
 
-//   .badge-cmp,
-//   .tag-cmp {
-//     padding: 1rem 2rem;
-//     background: var(--white-color);
-//     border-radius: 15px;
-//     flex-direction: row;
-//     width: auto;
+   &-lg {
+      font-family: inherit;
+      font-size: clamp(2.179rem, 5vw, 3.176rem);
+      font-weight: 700;
+      line-height: 1.15;
+      letter-spacing: -1px;
+   }
 
-//     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
-//   }
+   &-md {
+      font-family: inherit;
+      font-size: clamp(1.794rem, 4vw, 2.379rem);
+      font-weight: 700;
+      line-height: 1.25;
+      letter-spacing: -1px;
+   }
 
-//   .tag-cmp {
-//     flex-direction: column;
-//     margin-top: 3rem;
+   &-sm {
+      font-family: inherit;
+      font-size: clamp(1.476rem, 3vw, 1.782rem);
+      font-weight: 600;
+      line-height: 1.5;
+   }
 
-//     p {
-//       width: 100%;
-//       text-transform: uppercase;
-//       text-align: right;
-//     }
-//   }
+   &-xs {
+      font-family: inherit;
+      font-size: clamp(1.215rem, 2vw, 1.335rem);
+      font-weight: 500;
+      line-height: 1.5;
+   }
+   
+   
+   
+}
 
-//   span {
-//     font-size: 2.5rem;
+.paragraph {
+   font-family: inherit;
+   font-size: clamp(1rem, 2vw, 1.125rem);
+   line-height: inherit;
+   max-width: 95%;
+   height: auto;
+   text-transform: unset;
+   color: var(--color-white-200);
+}
 
-//     @media screen and (min-width: 2000px) {
-//       font-size: 5rem;
-//     }
-//   }
+// Header Section
+.header {
+   position: fixed;
+   top: 0;
+   left: 0;
+   z-index: 100;
+   width: 100%;
+   height: auto;
+   margin: 0 auto;
+   transition: all 0.35s ease;
 
-//   @media screen and (max-width: 1200px) {
-//     justify-content: flex-start;
-//     align-items: flex-start;
-//   }
-// }
+   &.on-scroll {
+      background: var(--color-black-300);
+      box-shadow: var(--shadow-medium);
+   }
+}
 
-// .app__header-circles {
-//   flex: 0.75;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-evenly;
-//   align-items: flex-start;
-//   height: 100%;
-//   margin-left: 1rem;
 
-//   div {
-//     width: 100px;
-//     height: 100px;
-//     border-radius: 50%;
 
-//     background: var(--white-color);
-//     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 
-//     img {
-//       width: 60%;
-//       height: 60%;
-//     }
-//   }
+// Banner Section
+.banner {
+   
+   .banner-inner{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      
+   }
+   &-heading_xl{
+      color: var(--primary-color);
+      font-size: 2rem;
+      margin-bottom: -1.3rem;
+   }
+   &-p_text{
+    color: var(--color-rust-200);
+    font-size: .8rem;
+    
+   }
 
-//   // circles with different height & width
+   &-paragraph{
+      color: var(--primary-color);
+      font-size: .7rem;
+      line-height: 1.5;
+      margin-left: 1.95rem;
+      
+   }
+   
 
-//   div:nth-child(1) {
-//     width: 100px;
-//     height: 100px;
-//   }
+   &-column {
+      position: relative;
+      display: grid;
+      align-items: center;
+      row-gap: 3rem;
 
-//   div:nth-child(2) {
-//     margin: 1.75rem;
-//     width: 150px;
-//     height: 150px;
-//   }
+      // Responsive Media Query
+    
+      @media only screen and (min-width: 48rem) {
+         grid-template-columns: repeat(2, minmax(0, 1fr));
+         justify-content: center;
+         
+         .banner-heading_xl {
+            font-size: 2.7rem;
+         }
 
-//   div:nth-child(3) {
-//     width: 70px;
-//     height: 70px;
-//   }
+         .banner-p_text{
+            font-size: 1.3rem;
+           }
+         
+           .banner-paragraph{
+            margin-left: 0;
+            font-size: 1.1rem;
+           }
+           
+           
+      }
 
-//   @media screen and (min-width: 2000px) {
-//     div:nth-child(2) {
-//       width: 400px;
-//       height: 400px;
-//     }
+      @media only screen and (min-width: 64rem) {
+         grid-template-columns: 1fr max-content;
+         column-gap: 4rem;
+         .banner-heading_xl {
+            font-size: 5rem;
+         }
+               
+      
+      }
+      
+     
+   }
 
-//     div:nth-child(3) {
-//       width: 170px;
-//       height: 170px;
-//     }
+   &-image {
+      display: block;
+      max-width: 18rem;
+      height: auto;
+      margin-top: 2rem;
+      object-fit: cover;
+      justify-self: center;
+      
+      // Responsive Media Query
+            
+      @media only screen and (min-width: 48rem) {
+         order: 1;
+         max-width: 20rem;
+         height: auto;
+      }
 
-//     div:nth-child(1) {
-//       width: 200px;
-//       height: 200px;
-//     }
-//   }
+      @media only screen and (min-width: 64rem) {
+         max-width: 25rem;
+         height: auto;
+         margin-right: 5rem;
+      }
+      
+   }
+  
+   &-inner {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      row-gap: 1.75rem;
+      
+      
+   }
 
-//   @media screen and (max-width: 1200px) {
-//     width: 100%;
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//     margin-left: 0;
+   &-links {
+      position: absolute;
+      top: 30%;
+      right: 1.5rem;
+      display: grid;
+      justify-items: center;
+      row-gap: 0.5rem;
+      opacity: 0;
+      visibility: hidden;
 
-//     div {
-//       margin: 1rem;
-//     }
-//   }
-// }
+      // Responsive Media Query
+      @media only screen and (min-width: 64rem) {
+         opacity: 1;
+         visibility: visible;
+      }
 
-// .app__header-img {
-//   flex: 1;
-//   height: 100%;
+      & > * {
+         font-size: 1.25rem;
+         line-height: 1.25;
+         color: var(--color-white-100);
+      }
 
-//   display: flex;
-//   justify-content: flex-end;
-//   align-items: flex-end;
-//   position: relative;
+      &::before {
+         position: absolute;
+         content: "";
+         top: -3rem;
+         width: 4rem;
+         height: 1.5px;
+         transform: rotate(90deg);
+         background: var(--color-white-100);
+      }
 
-//   img {
-//     width: 100%;
-//     object-fit: contain;
-//     z-index: 1;
-//   }
+      &::after {
+         position: absolute;
+         content: "";
+         bottom: -3rem;
+         width: 4rem;
+         height: 2px;
+         transform: rotate(90deg);
+         background: var(--color-white-10);
+      }
+   }
+}
 
-//   .overlay_circle {
-//     position: absolute;
-//     left: 0;
-//     right: 0;
-//     bottom: 0;
-//     z-index: 0;
-//     width: 100%;
-//     height: 90%;
-//   }
-
-//   @media screen and (max-width: 1200px) {
-//     margin: 2rem 0;
-//   }
-// }
+// Header Circles
+.app__header-circles {
+   flex: 0.75;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   align-items: flex-start;
+   height: 100%;
+   margin-left: 1rem;
+ 
+   div {
+     width: 100px;
+     height: 100px;
+     border-radius: 50%;
+ 
+     background: var(--white-color);
+     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+ 
+     img {
+       width: 60%;
+       height: 60%;
+     }
+   }
+ 
+   // circles with different height & width
+ 
+   div:nth-child(1) {
+     width: 100px;
+     height: 100px;
+   }
+ 
+   div:nth-child(2) {
+     margin: 1.75rem;
+     width: 150px;
+     height: 150px;
+   }
+ 
+   div:nth-child(3) {
+     width: 70px;
+     height: 70px;
+   }
+ 
+   @media screen and (min-width: 2000px) {
+     div:nth-child(2) {
+       width: 400px;
+       height: 400px;
+     }
+ 
+     div:nth-child(3) {
+       width: 170px;
+       height: 170px;
+     }
+ 
+     div:nth-child(1) {
+       width: 200px;
+       height: 200px;
+     }
+   }
+ 
+   @media screen and (max-width: 1200px) {
+     width: 100%;
+     flex-direction: row;
+     flex-wrap: wrap;
+     margin-left: 0;
+ 
+     div {
+       margin: 1rem;
+     }
+   }
+ }
