--- a/src/container/Skills/Skills.scss
+++ b/src/container/Skills/Skills.scss
@@ -1,3 +1,11 @@
+#skills{
+  position: relative;
+  background: url("../../assets/pngwing.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: repeat;
+}
+
 .app__skills {
   flex: 1;
   width: 100%;
